# ktp-ncnn-detection-kit

./: .gitignore  README.md
.github/workflows/: build-release-pages.yml
android/: build.gradle  gradle.properties  settings.gradle
android/sample/: build.gradle
android/sample/src/main/: AndroidManifest.xml
android/sample/src/main/java/id/ktpncnn/sample/: AspectFrameLayout.java  MainActivity.java  OverlayView.java
android/scripts/: setup_ncnn_android.sh
cli/: CMakeLists.txt
cli/src/: ktp_detect.cpp
model/: ktp_fp16.ncnn.param  metadata.yaml
web/: app.js  index.html  ktp-detector.js  styles.css
web/ncnn/: ktp_ncnn_fp16.js  ktp_ncnn_fp16.wasm
